--- a/package.json
+++ b/package.json
@@ -11,5 +11,15 @@
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.0.2",
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
+    "postcss": "^8.1.10",
+    "prettier": "^2.2.0",
+    "tailwindcss": "^2.0.1"
   }
 }
