--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,12 +2,10 @@
     "files.exclude": {
         ".next/": true
         , "node_modules/": true
-        // , ".eslintrc.json": true
-        // , ".gitignore": true
-        // , "package-lock.json": true
-        // , "postcss.config.js": true
-        // , "README.md": true
+        , ".eslintrc.json": true
+        , ".gitignore": true
+        , "package-lock.json": true
+        , "postcss.config.js": true
         // , "tailwind.config.js": true
-        // , "vercel.json": true
     }
 }
