--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,10 @@
         , "node_modules/": true
         , ".eslintrc.json": true
         , ".gitignore": true
+        , "next-env.d.ts": true
         , "package-lock.json": true
         , "postcss.config.js": true
         // , "tailwind.config.js": true
+        , "tsconfig.json": true
     }
 }
