--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@types/node": "^14.14.9",
+    "@types/react": "^17.0.0",
     "autoprefixer": "^10.0.2",
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
@@ -20,6 +22,7 @@
     "eslint-plugin-react": "^7.21.5",
     "postcss": "^8.1.10",
     "prettier": "^2.2.0",
-    "tailwindcss": "^2.0.1"
+    "tailwindcss": "^2.0.1",
+    "typescript": "^4.1.2"
   }
 }
