--- a/package.json
+++ b/package.json
@@ -3,26 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/error-message": "0.0.5",
+    "@mollie/api-client": "^3.4.0",
+    "axios": "^0.21.1",
     "next": "10.0.3",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-hook-form": "^6.14.2"
   },
   "devDependencies": {
-    "@types/node": "^14.14.9",
+    "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
-    "autoprefixer": "^10.0.2",
-    "eslint": "^7.14.0",
+    "autoprefixer": "^10.2.3",
+    "eslint": "^7.18.0",
     "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
-    "postcss": "^8.1.10",
-    "prettier": "^2.2.0",
-    "tailwindcss": "^2.0.1",
-    "typescript": "^4.1.2"
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "postcss": "^8.2.4",
+    "prettier": "^2.2.1",
+    "tailwindcss": "^2.0.2",
+    "typescript": "^4.1.3"
+  },
+  "resolutions": {
+    "axios": "^0.21.1"
   }
 }
